@@ -7,6 +7,7 @@
 - Fixed parsing issue with **line continuation with a With** and the With variable was the first item on a line
 - Fixed parsing of **Enum's with multiple items** per line
 - Preserve **comments in Enums**
+- Fixed **Enum auto-numbering** for Enums with some set and some unset values
 
 **0.4.0.4**
 
